# github-copilot-workshop-mcp

./: .gitignore  .pre-commit-config.yaml
.github/: dependabot.yml
.github/workflows/: ci-csharp.yml  ci-python.yml  ci-typescript.yml  codeql.yml  pre-commit.yml
docs/dev/: branch-protection.md  guardrails.md
docs/starter-csharp/: README.md
docs/starter-python/: README.md
docs/starter-typescript/: README.md
starter/csharp/: Directory.Build.props  Makefile  README.md  Starter.CSharp.sln
starter/csharp/src/Starter.CSharp.McpServer/: AssemblyInfo.cs  Program.cs  Starter.CSharp.McpServer.csproj  ToolContracts.cs  ToolHandlers.cs
starter/csharp/tests/Starter.CSharp.McpServer.Tests/: McpServerE2ETests.cs  Starter.CSharp.McpServer.Tests.csproj  ToolContractsTests.cs  ToolHandlersTests.cs  coverage.cobertura.xml
starter/python/: .coverage  Makefile  pyproject.toml
starter/python/src/starter_python_mcp/: __init__.py  main.py  server.py  tool_handlers.py
starter/python/src/starter_python_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
starter/python/tests/e2e/: test_stdio_e2e.py
starter/python/tests/unit/: test_server.py  test_tool_handlers.py
starter/typescript/: eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
starter/typescript/src/: index.ts  server.ts  toolHandlers.ts
starter/typescript/tests/e2e/: stdio.e2e.test.ts
starter/typescript/tests/unit/: toolHandlers.test.ts
